[package]
name = "web-simhash"
version = "0.1.1"
authors = ["Josh Terrill <josh@hacked.codes>"]
edition = "2021"
license = "MIT"
description = "Web-oriented 64-bit SimHash with weighted features and Google-paper-style lookup tables"
readme = "README.md"
repository = "https://github.com/artemis-watch/web-simhash-rs"

[lib]
name = "web_simhash"
path = "src/lib.rs"

[dependencies]
